--- a/src/global-styles.scss
+++ b/src/global-styles.scss
@@ -18,14 +18,6 @@ body {
 }
 
 body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
-html {
-  height: -webkit-fill-available;
-}
-
-body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
